# ExpGA

./: hello.py  pyproject.toml
data/: bank.py  bank_process.py  census.py  credit.py
expga/: ExpGA.py
