[project]
name = "expga"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py",
    "astor",
    "astunparse",
    "bleach",
    "blis",
    "boto",
    "cachetools",
    "catalogue",
    "certifi",
    "chardet",
    "cleverhans",
    "click",
    "cloudpickle",
    "contextvars",
    "cycler",
    "cymem",
    "dataclasses",
    "decorator",
    "dm-tree",
    "filelock",
    "gast",
    "google-auth",
    "google-auth-oauthlib",
    "google-pasta",
    "grpcio",
    "h5py",
    "html5lib",
    "idna",
    "imageio",
    "immutables",
    "importlib-metadata",
    "Jinja2",
    "joblib",
    "Keras",
    "Keras-Applications",
    "Keras-Preprocessing",
    "keras-vggface",
    "keras-vis",
    "kiwisolver",
    "langcodes",
    "lime",
    "Markdown",
    "MarkupSafe",
    "matplotlib",
    "mkl-fft",
    "mkl-random",
    "mkl-service",
    "mnist",
    "murmurhash",
    "networkx",
    "nltk",
    "nose",
    "numpy",
    "oauthlib",
    "olefile",
    "OpenAttack",
    "opt-einsum",
    "packaging",
    "pandas",
    "pathy",
    "Pillow",
    "preshed",
    "protobuf",
    "pyasn1",
    "pyasn1-modules",
    "pycodestyle",
    "pydantic",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "PyWavelets",
    "PyYAML",
    "regex",
    "requests",
    "requests-oauthlib",
    "rsa",
    "sacremoses",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "shap",
    "six",
    "smart-open",
    "spacy",
    "spacy-legacy",
    "spacy-loggers",
    "srsly",
    "tensorboard",
    "tensorboard-plugin-wit",
    "tensorflow",
    "tensorflow-estimator",
    "tensorflow-probability",
    "termcolor",
    "thinc",
    "threadpoolctl",
    "tifffile",
    "tokenizers",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers",
    "typer",
    "urllib3",
    "wasabi",
    "Werkzeug",
    "wrapt",
    "z3-solver",
    "zipp",
]
